--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
@@ -7,23 +7,24 @@ Responde como cierto o falso según corresponda.
 Preguntas:
 1. ¿Es un algoritmo un conjunto de pasos precisos, definidos y finitos que conducen a la solución de un problema? (valor 0.5)
 
-
+cierto
 
 2. ¿Todo algoritmo debe obedecer a la estructura básica de un sistema, es decir:
 ENTRADA -- PROCESO -- SALIDA?(valor 0.5)
-
+cierto
 
 3. ¿Al diseñar un algoritmo se deben tener presente las características de precisión, definición y finitud?(valor 0.5)
+4. cierto
 
 4. De las siguientes descripciones, menciona cuál es un algoritmo cualitativo y cuál es un algoritmo cuantitativo:
 
-      a) El proceso de realizar un sándwich por la mañana. (valor 0.5)
+      a) El proceso de realizar un sándwich por la mañana. (valor 0.5)cualitativo
 
-      b) El proceso de calcular la edad de una persona sabiendo su fecha de nacimiento.(valor0. 5)
+      b) El proceso de calcular la edad de una persona sabiendo su fecha de nacimiento.(valor0. 5)cuantitativo
 
-      c) Sumar cuántos comentarios tuvo una publicación en alguna red social. (valor 0.5)
+      c) Sumar cuántos comentarios tuvo una publicación en alguna red social. (valor 0.5)cuantitativo
 
-      d) El proceso que seguiste para inscribirte a la Escuela de Códigos. (valor 0.5)
+      d) El proceso que seguiste para inscribirte a la Escuela de Códigos. (valor 0.5)cualitativo
      
 
 5.- Para lavarse las manos necesitamos: un jabón, un recipiente con agua, una toalla y nuestras manos. Tomamos el recipiente con agua y vaciamos un poco para humedecer
@@ -34,11 +35,16 @@ secamos el agua de nuestras manos. ¡Listos! Tenemos nuestras manos limpias.
 
     En el texto anterior señala qué parte pertenece a la entrada, proceso y resultado de un algoritmo. (valor 1.5)
 
-    Entrada: 
+    Entrada: Para lavarse las manos necesitamos: un jabón, un recipiente con agua, una toalla y nuestras manos.
 
-    Proceso: 
+    Proceso: . Tomamos el recipiente con agua y vaciamos un poco para humedecer
+nuestras manos. Tomamos el jabón y lo frotamos entre nuestras manos de tal manera que genere espuma. Dejamos a lado el jabón y con la espuma generada frotamos
+nuestras manos y entrelazamos nuestros dedos. Tomamos el recipiente con agua y enjuagamos hasta que retiremos toda la espuma y los residuos de jabón. Revisamos si
+nuestras manos están lo suficientemente limpias, si no, realizamos el procedimiento anterior. Si nuestras manos están lo suficientemente limpias, tomamos la toalla y
+secamos el agua de nuestras manos. 
 
-    Resultado:
+    Resultado: ¡Listos! Tenemos nuestras manos limpias.
+
 
 
 2️⃣ OPERADORES
@@ -224,31 +230,31 @@ Preguntas:
 
                                          Respuesta: 
 
-    1. int
+    1. int      no
 
-    2. anInt
+    2. anInt  si
 
-    3. 3list
+    3. 3list  no
 
-    4. i1
+    4. i1       si
 
-    5. 1
+    5. 1          no
 
-    6. thing1
+    6. thing1   si
 
-    7. 1thing
+    7. 1thing no
 
-    8. ONE-HUNDRED
+    8. ONE-HUNDRED   no 
 
-    9. ONE_HUNDRED
+    9. ONE_HUNDRED     si
 
-    10. something2do
+    10. something2do si
 
 
 Indica que tipo de variable es en cada caso: (valor 0.3 por cada uno)
 
                                            Tipo de variable
-    11. iva = 0.15 
+    11. iva = 0.15  
 
     12. letra = ‘a’
 
