--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
@@ -14,7 +14,7 @@ ENTRADA -- PROCESO -- SALIDA?(valor 0.5)
 cierto
 
 3. ¿Al diseñar un algoritmo se deben tener presente las características de precisión, definición y finitud?(valor 0.5)
-4. cierto
+ cierto
 
 4. De las siguientes descripciones, menciona cuál es un algoritmo cualitativo y cuál es un algoritmo cuantitativo:
 
@@ -58,50 +58,52 @@ Preguntas:
 1.Realiza las siguientes operaciones numéricas y calcula el valor final:
 
     a) (100/5^2 + 1) + 11 * 3 =   (valor 0.5)
-   
+    
+   38
 
 
     b) (18/9 + 24) – ( 5 * 4 – 3^3) =      (valor 0.5)
-   
+ 33
  
     c) ((8-6)^2 * 3 - 2)^3 =        (valor 0.5)
-
+1000
 
     d) (3^2 + 10/2) + (3 * 9 - 1) =      (valor 0.5)
- 
+
+ 40
 
 2. Evalúe con FALSO o VERDADERO las siguientes expresiones relacionales. (valor 0.4 cada respuesta de la tabla)
 
         Expresión                                        Resultado
 
-        “Juan Hernández” <> “Juan Hdz.”
-        4 + 5 >= 9
-        -7*4/2 < 0
-        ‘A’ = ‘a’
+        “Juan Hernández” <> “Juan Hdz.”               VERDADERO
+        4 + 5 >= 9                                    VERDADERO
+        -7*4/2 < 0                                    VERDADERO
+        ‘A’ = ‘a’                                     FALSO
 
 
 3. Juan gana $200 por hora, Pedro gana $120 por hora. Esta quincena Juan trabajó 10 horas y Pedro 15, ¿Juan recibió un sueldo mayor al de Pedro?
 (valor 0.4 )
 
-    Resultado
+    Resultado Juan recibio mayor sueldo el gano 2000 y pedro solo 1800
 
 4. Evalúe con FALSO o VERDADERO las siguientes expresiones lógicas. (valor 0.4 cada respuesta de la tabla)
 
         Expresión                                     Resultado
 
-        15 = 6 AND 2 < 8 
+        15 = 6 AND 2 < 8                        FALSO
 
-        (10-2 > 9) OR (5*4 = 21)
+        (10-2 > 9) OR (5*4 = 21)                FALSO
 
-        (2==1) || (-1==-1)
+        (2==1) || (-1==-1)                      VERDADERO
 
-        (2==2) && (3==-1)
+        (2==2) && (3==-1)                       FALSO
 
 
 5. Los requisitos para sacar una credencial electoral son: ser mayor de edad y ser de  nacionalidad mexicana. Si Ómar tiene 21 años y nació en la Ciudad de México, ¿puede
 sacar la credencial? (valor 0.4 )
 
-    Respuesta: 
+    Respuesta: SI PUEDE 
 
 
 3️⃣ CONCEPTOS BÁSICOS DE PROGRAMACIÓN
@@ -115,14 +117,14 @@ por cada respuesta correcta de la tabla )
 
     Significado                                                            Concepto
 
-    Es un bloque de instrucciones (código
+    Es un bloque de instrucciones (código                                     programa
     fuente) escritas en cierto lenguaje de
     programación cuyo propósito es resolver
     un problema.
 
 
     Programa informático que procesa el
-    código fuente de un proyecto de software
+    código fuente de un proyecto de software                                  compilador
     durante su tiempo de ejecución, es decir,
     mientras el software se está ejecutando, y
     actúa como una interfaz entre ese
@@ -131,20 +133,20 @@ por cada respuesta correcta de la tabla )
 
     Es un idioma artificial creado para
     indicarle a la computadora lo que debe
-    hacer. tiene ciertas reglas de escritura
+    hacer. tiene ciertas reglas de escritura                                    lenguaje de programación
     (sintaxis) en las que utiliza símbolos y
     palabras clave, además de una semántica
     (interpretación interna).
 
 
-    La computadora realiza una traducción de
+    La computadora realiza una traducción de                                  intérprete
     sus componentes al lenguaje máquina, es
     decir, convierte las instrucciones en
     cadenas de ceros y unos.
 
 
     Programa informático que traduce todo el
-    código fuente de un proyecto de software
+    código fuente de un proyecto de software                                  ejecución de un programa
     a código máquina antes de ejecutarlo.
     Solo entonces el procesador ejecuta el
     software, obteniendo todas las
@@ -164,28 +166,28 @@ Preguntas:
 
 1. Menciona al menos 3 tipos de datos que existen: (valor 0.4)
 
-    Respuesta:
+    Respuesta:int, char, float
 
 2. ¿Qué tipo es cada uno de los siguientes datos? (valor 0.4 por cada inciso)
 
                                                                                       Tipo de dato
-        a) 15
+        a) 15                                                                             int
 
-        b) ‘a’
+        b) ‘a’                                                                            char
 
-        c) El mensaje ‘Esto es dato entero’
+        c) El mensaje ‘Esto es dato entero’                                               char
 
-        d) 35 >= 12
+        d) 35 >= 12                                                                       boolean
 
-        e) 3*3
+        e) 3*3                                                                            int
 
-        f) La edad de una persona
+        f) La edad de una persona                                                          int
 
-        g) El pago por un servicio o producto
+        g) El pago por un servicio o producto                                             float
 
-        h) El símbolo ‘@’
+        h) El símbolo ‘@’                                                                  char
 
-        i) El mensaje ‘Agrega más artículos a tu canasta para envío GRATIS’
+        i) El mensaje ‘Agrega más artículos a tu canasta para envío GRATIS’                char
 
 
 12. Una empresa que se dedica a la venta de productos de salud pide a sus clientes que al registrarse en su página introduzcan los siguientes datos:
@@ -206,15 +208,15 @@ Llena la siguiente tabla:
 
     Requerimiento                                               Tipo de dato
 
-    Nombre Completo:
+    Nombre Completo:                                              char
     
-    Peso en kilogramos:
+    Peso en kilogramos:                                           float
     
-    Correo electrónico:
+    Correo electrónico:                                           char
     
-    Número de teléfono:
+    Número de teléfono:                                            int
     
-    Resuelve el siguiente CAPTCHA: 3 > 4
+    Resuelve el siguiente CAPTCHA: 3 > 4                           boolean
     ¿Cierto o Falso?
 
 
@@ -230,41 +232,41 @@ Preguntas:
 
                                          Respuesta: 
 
-    1. int      no
+    1. int                    no
 
-    2. anInt  si
+    2. anInt                  si
 
-    3. 3list  no
+    3. 3list                  no
 
-    4. i1       si
+    4. i1                     si
 
-    5. 1          no
+    5. 1                      no
 
-    6. thing1   si
+    6. thing1                 si
 
-    7. 1thing no
+    7. 1thing                 no
 
-    8. ONE-HUNDRED   no 
+    8. ONE-HUNDRED            no 
 
-    9. ONE_HUNDRED     si
+    9. ONE_HUNDRED            si
 
-    10. something2do si
+    10. something2do          si
 
 
 Indica que tipo de variable es en cada caso: (valor 0.3 por cada uno)
 
                                            Tipo de variable
-    11. iva = 0.15  
+    11. iva = 0.15                  
 
-    12. letra = ‘a’
+    12. letra = ‘a’                  
 
-    13. suma = a + b/ c 
+    13. suma = a + b/ c              
 
-    14. interrup = true
+    14. interrup = true             
 
-    15. apellido= ‘lopez’ 
+    15. apellido= ‘lopez’           
 
-    16. x = x + 1
+    16. x = x + 1                   
 
     17. suma = suma + num 
 
