--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
@@ -256,25 +256,25 @@ Preguntas:
 Indica que tipo de variable es en cada caso: (valor 0.3 por cada uno)
 
                                            Tipo de variable
-    11. iva = 0.15                  
+    11. iva = 0.15                  numericas
 
-    12. letra = ‘a’                  
+    12. letra = ‘a’                  alfanumericas
 
-    13. suma = a + b/ c              
+    13. suma = a + b/ c              de trabajo
 
-    14. interrup = true             
+    14. interrup = true             logicas
 
-    15. apellido= ‘lopez’           
+    15. apellido= ‘lopez’           alfanumerica
 
-    16. x = x + 1                   
+    16. x = x + 1                 contador
 
-    17. suma = suma + num 
+    17. suma = suma + num          acumulador
 
-    18. c = sqrt(a*a + b*b)
+    18. c = sqrt(a*a + b*b)     de trabajo
 
-    19. costo=750
+    19. costo=750               numerica
 
-    20. i = i - 1
+    20. i = i - 1              contador
     
     
   [Regresar al menu principal del módulo](https://github.com/escuelaDeCodigoMargaritaMaza/escuela_de_codigo/tree/main/PENSAMIENTO_COMPUTACIONAL)
