--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/2. EVALUACION_DE_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/2. EVALUACION_DE_MODULO.md
@@ -8,24 +8,46 @@ Actividad:
   1. Escribe de lado derecho el significado de cada uno de los símbolos usando las
   siguientes palabras: 
   
-  Conectores
+  +Conectores
   
-  Decisión múltiple
+  +Decisión múltiple
   
-  Imprimir resultados
+  +Imprimir resultados
   
   Proceso
   
-  Entrada de datos
+  +Entrada de datos
   
-  Terminal /Inicio
+ + Terminal /Inicio
   
-  Flujo de datos
+  +Flujo de datos
   
-  Decisión
+  +Decisión
+  
+  
+  1 Terminal /Inicio
+  2 Entrada de datos
+  3 Proceso
+  4 Decisión
+  5 Decisión múltiple
+  6 Imprimir resultados
+  7 Flujo de datos
+  8 conectores
+  
   
   ![image](https://user-images.githubusercontent.com/91554777/160035477-c0f52624-a62c-40d0-b2e2-3dccdd8549e4.png)
 
+
+![image](https://user-images.githubusercontent.com/101912013/161402584-0568b8ae-f228-4e0c-b92b-52415b87416b.png)
+
+1 Terminal /Inicio
+  2 Entrada de datos
+  3 Proceso
+  4 Decisión
+  5 Decisión múltiple
+  6 Imprimir resultados
+  7 Flujo de datos
+  8 conectores
   
   (valor 0.4 por cada significado correcto, total 3.2)
   
