--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/2. EVALUACION_DE_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/2. EVALUACION_DE_MODULO.md
@@ -54,6 +54,10 @@ Actividad:
    2. Realiza un diagrama de flujo de la suma de dos números cualesquiera. Se debe partir de que para poder obtener la suma es necesario contar con dos números, pues el
     proceso que debemos realizar es precisamente la suma de éstos, la cual se asigna a una variable que se reporta como resultado del proceso. (valor 2.8)
     
+    ![image](https://user-images.githubusercontent.com/101912013/161402741-ef6c8f26-780a-4cf2-a941-8d647f8bcbea.png)
+
+    
+    
  #### Práctica 7
 7. ESTRUCTURAS DE CONTROL
 Objetivo: Verificar el dominio de los diagramas de flujo, condicional e iterativo a través de preguntas abiertas.
