--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
@@ -185,7 +185,7 @@ Preguntas:
 
         b) ‘a’                                                                            char
 
-        c) El mensaje ‘Esto es dato entero’                                               char
+        c) El mensaje ‘Esto es dato entero’                                               string
 
         d) 35 >= 12                                                                       boolean
 
@@ -224,7 +224,7 @@ Llena la siguiente tabla:
     
     Correo electrónico:                                           char
     
-    Número de teléfono:                                            int
+    Número de teléfono:                                            string
     
     Resuelve el siguiente CAPTCHA: 3 > 4                           boolean
     ¿Cierto o Falso?
