--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/2. EVALUACION_DE_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/2. EVALUACION_DE_MODULO.md
@@ -64,8 +64,13 @@ Objetivo: Verificar el dominio de los diagramas de flujo, condicional e iterativ
 Indicaciones: Pedir esquematizar en un diagrama de flujo según lo que se pide.
 #### Actividad:
   1. Realiza un diagrama de flujo que muestre el proceso para determinar si un número es positivo o negativo. (valor 12 puntos, usando la rúbrica de estructura de control)
-  2. Realiza un diagrama de flujo para obtener la suma de diez cantidades mediante la utilización de un ciclo “Mientras”. (valor 12 puntos, usando la rúbrica de estructura de
-control)
+
+![image](https://user-images.githubusercontent.com/101912013/161404531-09e498ee-9455-4b55-a74a-3913710ab489.png)
+
+  2. Realiza un diagrama de flujo para obtener la suma de diez cantidades mediante la utilización de un ciclo “Mientras”. (valor 12 puntos, usando la rúbrica de estructura de control)
+
+![image](https://user-images.githubusercontent.com/101912013/161404666-59f768c5-4d07-49e4-b683-059fa487aec9.png)
+
 
 #### Práctica 8
 8. PSEUDOCÓDIGO
@@ -77,5 +82,39 @@ Indicaciones: Pedir escribir lo más explícitamente posible el pseudocódigo co
 #### Actividad:
 
   1. Escribir el pseudocódigo de un programa que imprima los números pares que se encuentran entre 0 y 100. (valor 12 puntos, usando la pseudocódigo)
-  2. Escribir el pseudocódigo de un programa que determine cuánto se debe pagar por equis cantidad de lápices considerando que si son 1000 o más el costo es de 85¢; de lo
+
+Algoritmo Paresen100
+	
+	Para i<-0 Hasta 100 Con Paso 2 Hacer
+  
+		Escribir i
+    
+	Fin Para
+  
+FinAlgoritmo
+
+
+  3. Escribir el pseudocódigo de un programa que determine cuánto se debe pagar por equis cantidad de lápices considerando que si son 1000 o más el costo es de 85¢; de lo
 contrario, el precio es de 90¢. (valor 12 puntos, usando la pseudocódigo)
+
+
+Algoritmo CantidadaPagar
+
+	Escribir "Ingrese la cantidad de lápices"
+  
+	Leer cantidadLapices
+  
+	Si cantidadLapices>= 1000 Entonces
+  
+		cantidadpago=cantidadLapices*0.85
+    
+	SiNo
+  
+		cantidadpago=cantidadLapices*0.90
+    
+	Fin Si
+  
+	Escribir "tu total a pagar es de",cantidadpago
+  
+FinAlgoritmo
+
