--- a/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
+++ b/PENSAMIENTO_COMPUTACIONAL/EJERCICIOS/1. EVALUACION_DEL_MODULO.md
@@ -197,7 +197,7 @@ Preguntas:
 
         h) El símbolo ‘@’                                                                  char
 
-        i) El mensaje ‘Agrega más artículos a tu canasta para envío GRATIS’                char
+        i) El mensaje ‘Agrega más artículos a tu canasta para envío GRATIS’                string
 
 
 12. Una empresa que se dedica a la venta de productos de salud pide a sus clientes que al registrarse en su página introduzcan los siguientes datos:
@@ -218,11 +218,11 @@ Llena la siguiente tabla:
 
     Requerimiento                                               Tipo de dato
 
-    Nombre Completo:                                              char
+    Nombre Completo:                                              string
     
     Peso en kilogramos:                                           float
     
-    Correo electrónico:                                           char
+    Correo electrónico:                                           string
     
     Número de teléfono:                                            string
     
